<resources>
    <string name="app_name">Band2 Monitor</string>
    <string name="logging">Logging</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="galvanic_skin_response">Galvanic Skin Response (k\u2126)</string>
    <string name="heart_rate_bpm">Heart rate (bpm)</string>
    <string name="inter_beat_rr_interval_s">RR-interval (s)</string>
    <string name="gsr">GSR</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="barometer">Barometer</string>
    <string name="enter_session_name">Enter session name</string>
</resources>
