<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="fi.helsinki.cs.unisensors.band2.MainActivity">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/galvanic_skin_response"
            android:id="@+id/gsrBox"
            android:layout_alignParentStart="true" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heart_rate_bpm"
            android:id="@+id/hrBox"
            android:layout_below="@+id/gsrBox"
            android:layout_alignParentStart="true" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inter_beat_rr_interval_s"
            android:id="@+id/rrBox"
            android:checked="false"
            android:layout_below="@+id/hrBox"
            android:layout_alignParentStart="true" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gyroscope"
            android:id="@+id/gyroBox"
            android:checked="false"
            android:layout_below="@+id/rrBox"
            android:layout_alignParentStart="true" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accelerometer"
            android:id="@+id/accBox"
            android:checked="false"
            android:layout_below="@+id/gyroBox"
            android:layout_alignParentStart="true" />

        <Button
            android:text="@string/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/serviceButton"
            android:layout_below="@+id/accBox"
            android:layout_alignParentStart="true" />

    </RelativeLayout>
</layout>